# sqlite_backup

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: main.yaml
docs/sqlite_backup/: core.md  index.md  log.md
sqlite_backup/: core.py  log.py
tests/: __init__.py
